GNOME Bugzilla – Bug 578520
Crash in load_graph_change_speed at load-graph.cpp line 736
Last modified: 2011-11-11 10:03:55 UTC
Steps to reproduce: This was reported at https://bugs.edge.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/358387: "I open gnome-system-monitor, I go to Edit -> Preferences and I change, in the tabs, the time intervals. Then, gnome-system-monitor crashes." Stack trace: ERROR:load-graph.cpp:736:void load_graph_change_speed(LoadGraph*, guint): assertion failed: (g->timer_index) Program received signal SIGABRT, Aborted.
+ Trace 214326
Thread 3063854928 (LWP 5080)
Other information:
I see this crash too. I'm using System Monitor 2.28.0 on Ubuntu 9.10.
This bug has been submitted on 2009-04-09 and there is still no progress or what so ever. The developer needs some slapping in the face or this bug will stay for years! In Maverick the same is still the case and crashes with error: ERROR:load-graph.cpp:742:void load_graph_change_speed(LoadGraph*, guint): assertion failed: (g->timer_index) ptrace: Operation not permitted. /home/ezflow/2966: No such file or directory. No stack. If i run system monitor with sudo it does not crash so something is up with the permissions.
*** Bug 631208 has been marked as a duplicate of this bug. ***
last dupe in 2.28.x
Hello, I also have this bug on Ubuntu 10.10 (upgraded from an Ubuntu 10.04) and gnome-system-monitor 2.28.1, with the following error : ERROR:load-graph.cpp:742:void load_graph_change_speed(LoadGraph*, guint): assertion failed: (g->timer_index) Note the difference with the first comment : 736 vs 742. For me, this problem occurs only when I change the refreshing frequency in the resources preferences tab's. In the preferences window's, if I change the value in the other tabs (processes and file system), everything is ok. From the moment I change the value in the resources tab's, the next click (on close or another tab or the case to tick), gnome-system crash with the error previously mentioned. As a workaround : if I selected the resources tab before to go in the preferences, I was able to change the refreshing frequency fro the resources without crash. Then I could select the tab I wanted before to open the preferences and change the value without crash (my English is may be not so easy to well understand, cause I'm French, just tell me if it's not well understandable!)
I'm getting this but only occasionally. I also only get this with the resources tab. I'll try to track it down.
Created attachment 200714 [details] [review] patch to remove unnecessary assert I can reproduce it all the time, by changing the refresh frequency on the Resources tab, and selecting another tab. I always get the ERROR:load-graph.cpp:xxx:void load_graph_change_speed(LoadGraph*, guint): assertion failed: (g->timer_index) message. Checking the code, there is an assert to make sure the pointer is not a nullpointer, and after that it's also checked with an if statement, so removing the assert will not cause the crash anymore, and will not cause any harm.
Fixed in commit dbc19ed7fa89ddd426028a45265ea49857272637 Thanks.