Remove unnecessary assert which causes crash

https://bugzilla.gnome.org/show_bug.cgi?id=578520